fix: organizer and customer sign up
